app/styles/header.module.scss
@use 'variables.module.scss' as var;

.root {
  display: grid;
  grid-template-columns: 1fr 60px 1fr;
  grid-template-rows: auto;
  align-items: center;
  justify-content: space-between;
  height: 80px;
  gap: var.$default-padding;

  .sectionLinks {
    .link {
      padding-right: var.$default-padding * 2;
    }
  }

  .logo {
    margin-top: 16px;
  }

  .buttonGroup {
    justify-self: end;
  }
}

